2012-07-10  Christian Egli  <christian.egli@sbs.ch>

	* doc/liblouis.texi (How to Write Translation Tables): Document
	the fact that translation tables can now be in UTF-8.
	(Top): Document the doctests.
	(How to Write Translation Tables): Add some minimal documentation
	about the doctests

2012-06-28  Christian Egli  <christian.egli@sbs.ch>

	* doc/liblouis.texi (Miscellaneous Opcodes): Enhance the
	documentation on the display opcode

2012-06-14  Christian Egli  <christian.egli@sbs.ch>

	* liblouis/lou_translateString.c (hyphenate): Fix a buffer overrun.

2012-06-07  Christian Egli  <christian.egli@sbs.ch>

	* liblouis/compileTranslationTable.c (compilePassOpcode): Increase
	the number of chars matched in a $a. expression from 32 to 0xffff.

	* doc/liblouis.texi (The Context and Multipass Opcodes): Document
	the fact that context $a. matches are limited to 0xffff

	* python/louis/__init__.py.in (hyphenate): Now that we know that
	hyphens array should be inlen+1 adapt the Python bindings
	accordingly.

	* doc/liblouis.texi (lou_hyphenate): Fix a documentation bug with
	lou_hyphenate. The length of the hyphens array should be inlen+1.

	* tests/Makefile.am (check_PROGRAMS):
	* tests/brl_checks.c (check_hyphenation):
	* tests/brl_checks.h:
	* tests/hyphenate.c (main): Add a test program hyphenation.

2012-06-01  Christian Egli  <christian.egli@sbs.ch>

	* tests/Makefile.am:
	* tests/repeated.c:
	* tests/squash_space.c:
	* tests/tables/Makefile.am:
	* tests/tables/repeated.utb:
	* tests/tables/repeated_with_correct.utb:
	* tests/tables/squash_space_with_context_1.utb:
	* tests/tables/squash_space_with_context_2.utb:
	* tests/tables/squash_space_with_correct.utb:
	* tests/tables/squash_space_with_repeated.utb: More tests for
	squashing white space. It looks like I found some bugs after all.

	* tests/brl_checks.c (check_translation): Also print the input
	string and delimit the strings with single quotes to better see
	white space.
