@@ -16,6 +16,6 @@ my $table="loop.ctb";
 $SIG{ALRM} = sub { die "lou_checktable on $table stuck in endless loop\n" };
 
 alarm 5;
-system("lou_checktable $table --quiet") == 0 
+system("../tools/lou_checktable $table --quiet") == 0 
     or die "lou_checktable on $table failed\n";
 alarm 0;
