@@ -43,8 +43,8 @@ my @tables = (
 
 # ensure existing tables are found
 foreach my $table (@tables) {
-    system("lou_checktable $table --quiet") == 0 or die;
+    system("../tools/lou_checktable $table --quiet") == 0 or die;
 }
 
 # ensure a non-existing table is not found
-system("lou_checktable nonexistent.ctb 2> /dev/null") != 0 or die;
+system("../tools/lou_checktable nonexistent.ctb 2> /dev/null") != 0 or die;
